# pietro

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  STATUS.md  build.rs  memory.md  pietro.md  pietro.yaml
.github/workflows/: docker-publish.yml  release.yml
docs/: architecture.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  NewKey.tsx
migrations/: 0001_init.sql  0002_key_unique_per_label.sql
scripts/: fake-idp.py
src/: config.rs  db.rs  errors.rs  keys.rs  main.rs  proxy.rs  routes.rs  secret.rs  spa.rs
src/auth/: mod.rs  oidc.rs  session.rs
