[package]
name = "pietro"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP server (M1+)
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# CLI (M1+)
clap = { version = "4", features = ["derive"] }

# Config (M1+)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
url = "2"
regex = "1"

# Error / log (M1+)
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
# For `ServiceExt::oneshot` in router integration tests.
tower = { version = "0.5", features = ["util"] }
