[package]
name = "pietro"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP server (M1+)
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# CLI (M1+)
clap = { version = "4", features = ["derive"] }

# Config (M1+)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
url = "2"
regex = "1"

# Error / log (M1+)
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Storage (M2+)
# Pin to the runtime + driver we actually use. `migrate` ships the macro that
# embeds `migrations/*.sql` at compile time (§9). No TLS feature — SQLite is
# local.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

# OIDC + sessions (M3+)
# `openidconnect` 4.x ships its own oauth2 5.x; we use the async-reqwest path.
# `reqwest` is configured with rustls-tls and `redirect::Policy::none()` per
# the upstream SSRF guidance.
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
# `cookie` + `cookie-signed` give us SignedCookieJar (one signed cookie
# carrying the session id — see §10 of pietro.md). We also depend on `cookie`
# directly with `key-expansion` enabled — axum-extra re-exports `Key` but
# doesn't turn on the HKDF helpers we need (`Key::derive_from`).
axum-extra = { version = "0.12", features = ["cookie", "cookie-signed"] }
cookie = { version = "0.18", features = ["key-expansion"] }
serde_json = "1"
# Encode/decode helpers used by the OIDC flow and config key material.
base64 = "0.22"
hex = "0.4"
# Constant-time-ish encoding for our internal random IDs.
rand = "0.8"
# Timestamp arithmetic that doesn't drag in chrono.
time = { version = "0.3", features = ["formatting", "parsing"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
# For `ServiceExt::oneshot` in router integration tests.
tower = { version = "0.5", features = ["util"] }
# Fake OIDC issuer + (later) fake upstream services for integration tests.
wiremock = "0.6"
