[package]
name = "pietro"
version = "0.1.0"
edition = "2024"

[dependencies]
# HTTP server (M1+)
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

# CLI (M1+)
clap = { version = "4", features = ["derive"] }

# Config (M1+)
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
url = "2"
regex = "1"

# Error / log (M1+)
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Storage (M2+)
# Pin to the runtime + driver we actually use. `migrate` ships the macro that
# embeds `migrations/*.sql` at compile time (§9). No TLS feature — SQLite is
# local.
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

# OIDC + sessions (M3+)
# `openidconnect` 4.x ships its own oauth2 5.x; we use the async-reqwest path.
# `reqwest` is configured with rustls-tls and `redirect::Policy::none()` per
# the upstream SSRF guidance.
openidconnect = "4"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    # `stream` re-enables Body::wrap_stream and Response::bytes_stream,
    # which the proxy forwarder (§12) needs to pipe bodies through without
    # buffering.
    "stream",
] }
# `cookie` + `cookie-signed` give us SignedCookieJar (one signed cookie
# carrying the session id — see §10 of pietro.md). We also depend on `cookie`
# directly with `key-expansion` enabled — axum-extra re-exports `Key` but
# doesn't turn on the HKDF helpers we need (`Key::derive_from`).
axum-extra = { version = "0.12", features = ["cookie", "cookie-signed"] }
cookie = { version = "0.18", features = ["key-expansion"] }
serde_json = "1"
# Encode/decode helpers used by the OIDC flow and config key material.
base64 = "0.22"
hex = "0.4"
# Base32 in Crockford alphabet for `pi_live_<22 char>` API key bodies and the
# 6-char public KeyId (§11.1, §11.2). Tiny crate, no deps.
base32 = "0.5"
# Constant-time-ish encoding for our internal random IDs.
rand = "0.8"
# Fast keyed-ish hash for API keys. We use BLAKE3 over (pepper || plaintext)
# — see §11.3 for why Argon2/bcrypt would be the wrong tool here.
blake3 = "1"
# Timestamp arithmetic that doesn't drag in chrono.
time = { version = "0.3", features = ["formatting", "parsing"] }
# Stream adapters for the proxy (M5). axum + reqwest both pull this in
# transitively, so adding it directly costs us nothing.
futures-util = { version = "0.3", default-features = false }

# Embed the built React SPA (`frontend/dist/`) into the binary at compile
# time, so a single binary ships the full UI (§13). One handler in
# `src/spa.rs` serves the bytes with Content-Type guessed by extension and
# falls back to `index.html` for SPA history-mode routes (§7). No
# `mime_guess` needed — the bundle is JS+CSS+HTML+SVG and the match table
# is ten lines.
rust-embed = "8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
# For `ServiceExt::oneshot` in router integration tests.
tower = { version = "0.5", features = ["util"] }
# Fake OIDC issuer + (later) fake upstream services for integration tests.
wiremock = "0.6"
